# ilqgames

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Meeting_with_DFK___08192020.rtf  README.md  test_orientation_flat_cost.cpp
documentation/: CMakeLists.txt  Doxyfile
documentation/html/: _c_make_c_compiler_id_8c_source.html  _r_e_a_d_m_e_8md_source.html  affine__equality__constraint_8h_source.html  affine__scalar__constraint_8h_source.html  affine__vector__constraint_8h_source.html  air__3d_8cpp_source.html  air__3d_8h_source.html  air__3d__example_8cpp_source.html  air__3d__example_8h_source.html  annotated.html  augmented__lagrangian__solver_8cpp_source.html  augmented__lagrangian__solver_8h_source.html  barrier_8cpp_source.html  barrier_8h_source.html  check__local__nash__equilibrium_8cpp_source.html  check__local__nash__equilibrium_8h_source.html  classes.html  classilqgames_1_1_affine_equality_constraint-members.html  classilqgames_1_1_affine_equality_constraint.html  classilqgames_1_1_affine_scalar_constraint-members.html  classilqgames_1_1_affine_scalar_constraint.html  classilqgames_1_1_affine_vector_constraint-members.html  classilqgames_1_1_affine_vector_constraint.html  classilqgames_1_1_air3_d-members.html  classilqgames_1_1_air3_d.html  classilqgames_1_1_air3_d_example-members.html  classilqgames_1_1_air3_d_example.html  classilqgames_1_1_augmented_lagrangian_solver-members.html  classilqgames_1_1_augmented_lagrangian_solver.html  classilqgames_1_1_barrier-members.html  classilqgames_1_1_barrier.html  classilqgames_1_1_concatenated_dynamical_system-members.html  classilqgames_1_1_concatenated_dynamical_system.html  classilqgames_1_1_concatenated_flat_control_cost-members.html  classilqgames_1_1_concatenated_flat_control_cost.html  classilqgames_1_1_concatenated_flat_system-members.html  classilqgames_1_1_concatenated_flat_system.html  classilqgames_1_1_constraint-members.html  classilqgames_1_1_constraint.html  classilqgames_1_1_control_sliders-members.html  (+413 more)
documentation/latex/: annotated.tex  classilqgames_1_1_affine_equality_constraint.eps  classilqgames_1_1_affine_equality_constraint.tex  classilqgames_1_1_affine_scalar_constraint.eps  classilqgames_1_1_affine_scalar_constraint.tex  classilqgames_1_1_affine_vector_constraint.eps  classilqgames_1_1_affine_vector_constraint.tex  classilqgames_1_1_air3_d.eps  classilqgames_1_1_air3_d.tex  classilqgames_1_1_air3_d_example.eps  classilqgames_1_1_air3_d_example.tex  classilqgames_1_1_augmented_lagrangian_solver.eps  classilqgames_1_1_augmented_lagrangian_solver.tex  classilqgames_1_1_barrier.eps  classilqgames_1_1_barrier.tex  classilqgames_1_1_concatenated_dynamical_system.eps  classilqgames_1_1_concatenated_dynamical_system.tex  classilqgames_1_1_concatenated_flat_control_cost.eps  classilqgames_1_1_concatenated_flat_control_cost.tex  classilqgames_1_1_concatenated_flat_system.eps  classilqgames_1_1_concatenated_flat_system.tex  classilqgames_1_1_constraint.eps  classilqgames_1_1_constraint.tex  classilqgames_1_1_control_sliders.tex  classilqgames_1_1_cost.eps  classilqgames_1_1_cost.tex  classilqgames_1_1_cost_inspector.tex  classilqgames_1_1_curvature_cost.eps  classilqgames_1_1_curvature_cost.tex  classilqgames_1_1_dubins_origin_example.eps  classilqgames_1_1_dubins_origin_example.tex  classilqgames_1_1_equality_constraint.eps  classilqgames_1_1_equality_constraint.tex  classilqgames_1_1_extreme_value_cost.eps  classilqgames_1_1_extreme_value_cost.tex  classilqgames_1_1_final_time_constraint.eps  classilqgames_1_1_final_time_constraint.tex  classilqgames_1_1_final_time_cost.eps  classilqgames_1_1_final_time_cost.tex  classilqgames_1_1_final_time_equality_constraint.eps  (+182 more)
exec/: CMakeLists.txt
exec/air_3d_example/: main.cpp
exec/collision_avoidance_reachability_example/: main.cpp
exec/defensive_driving_receding_horizon_intersection/: main.cpp
exec/defensive_driving_receding_horizon_roundabout_merging/: main.cpp
exec/dubins_origin_example/: main.cpp
exec/flat_receding_horizon/: main.cpp
exec/flat_receding_horizon_intersection/: main.cpp
exec/flat_roundabout_merging_example/: main.cpp
exec/four_player_intersection/: main.cpp
exec/highway_merging/: main.cpp
exec/lane_change_clone_example/: main.cpp
exec/minimally_invasive_intersection_example/: main.cpp
exec/modified_air_3d_example/: main.cpp
exec/modified_three_player_intersection_example/: main.cpp
python/: cost.py  (+46 more)
test/: CMakeLists.txt  test_extreme_value_test.cpp  test_line_segment2.cpp  test_linearization.cpp  test_lq_solver.cpp  test_main.cpp  test_orientation_costs.cpp  test_player_cost.cpp  test_polyline2.cpp  test_quadratic_cost.cpp  test_quadratic_polyline2_cost.cpp  test_quadraticization.cpp  test_semiquadratic_cost.cpp  test_solve_lq_game.cpp
(+364 files in other folders)
